# safe_control

./: .gitignore  .gitmodules  README.md  cbf_qp.py  mpc_cbf.py  publish_tracking.py  publish_tracking_circle.py  publish_tracking_node.py  publish_u_quad.py  pyproject.toml  run_barriernet_all.sh  setup.py  tracking.py
BarrierNet/: models.py
attitude_control/: gatekeeper_attitude.py  simple_attitude.py  velocity_tracking_yaw.py  visibility_area.py  visibility_promoting_yaw.py  visibility_raycast.py
dynamic_env/: README.md  kinematic_bicycle2D_c3bf.py  kinematic_bicycle2D_dpcbf.py  main.py  robot.py
envs/: __init__.py  drifting_env.py  evade_env.py  inventory_env.py  warehouse_env.py
examples/: test_multi_robot.py  test_simple_cbf.py  test_tracking.py  test_unknown_env.py  test_vtol.py
examples/drift_car/: __init__.py  test_drift.py  (+2 more)
position_control/: backup_cbf_qp.py  backup_controller.py  backupcbf.py  barriernet_controller.py  cbf_qp.py  mpc_cbf.py  mpc_iccbf.py  mpcc.py  optimal_decay_cbf_qp.py  optimal_decay_mpc_cbf.py  test_barriernet_controller.py  test_robot_model_aware.py
robots/: README.md  double_integrator2D.py  drifting_car.py  dynamic_bicycle2D.py  dynamic_unicycle2D.py  kinematic_bicycle2D.py  kinematic_bicycle2D_c3bf.py  kinematic_bicycle2D_dpcbf.py  manipulator2D.py  quad2D.py  quad3D.py  robot.py  single_integrator2D.py  unicycle2D.py  vtol2D.py
shielding/: README.md  __init__.py  gatekeeper.py  mps.py
tools/: generate_bn_dataset.py
utils/: animation.py  detection.py  env.py  geometry.py  headless_plot.py  plotting.py  utils.py
(+22 files in other folders)
